@@ -23,6 +23,8 @@
 #define LAYER_HH
 
 #include <string>
+#include <stdio.h>
+
 using std::string;
 
 /** 
