@@ -136,7 +136,7 @@ void Workspace::hideAll(bool interrupt_moving) {
 void Workspace::removeAll(unsigned int dest) {
     Windows tmp_list(m_windowlist);
     Windows::iterator it = tmp_list.begin();
-    Windows::const_iterator it_end = tmp_list.end();
+    Windows::iterator it_end = tmp_list.end();
     for (; it != it_end; ++it)
         m_screen.sendToWorkspace(dest, *it, false);
 }
