@@ -1,6 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.1:
 *07/10/24:
+   * Fixed some gcc 2.96 compile issues ( Henrik )
+     Layer.hh, MinOverlapPlacement.cc, Workspace.cc
    * Introduced (workspacename=...) for pattern matching and changed
      (workspace=...) to use the workspace number, indexed from 0 (Mark)
      ClientPattern.cc/hh
